# textual-palettes

./: pyproject.toml
src/palettes/: __main__.py  app.css  app.py
