[tool.poetry]
name = "palettes"
version = "0.1.0"
description = ""
authors = ["Felix Ingram <f.ingram@gmail.com>"]
readme = "README.md"
packages = [{include = "palettes", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["dev"], version = "^0.9.1"}
httpx = "^0.23.3"

[tool.poetry.scripts]
palettes = "palettes.__main__:run"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
aiohttp = "^3.8.3"
msgpack = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


